# RAG-implementation

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  architecture.md  main.py  pyproject.toml  requirements.txt  test_injection.py  test_mini.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  README.md  docker-compose.yml
docs/: 00-overview-and-master-index.md  01-foundation-repo-restructure-and-connector-contracts.md  02-connector-implementations-faiss-gemini-and-config.md  03-backend-api-routing-and-schemas.md  04-caching-and-memory-layer.md  05-structured-logging-and-correlation-ids.md  06-authorization-and-rate-limiting.md  07-async-ingestion-pipeline.md  08-reliability-retries-timeouts-streaming.md  09-observability-metrics-tracing-health.md  10-frontend-reference-ui.md  11-security-hardening.md  12-testing-strategy.md  13-deployment-and-cicd.md  14-documentation-versioning-distribution.md
docs/connectors/: faiss-gemini.md
docs/patterns/: multi-tenancy.md
examples/configs/: .env.faiss-gemini
examples/observability/: grafana-dashboard.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
index_store/: faiss_index.idx  text_chunks.json
ragframework/: cli.py  config.py  log_utils.py
ragframework/api/: deps.py  main.py  schemas.py
ragframework/cache/: __init__.py  base.py  memory_cache.py  redis_cache.py
ragframework/core/: chunking.py  generation.py  ingestion.py  retrieval.py
ragframework/llms/: base.py  google_genai.py  registry.py  retry.py
ragframework/memory/: __init__.py  base.py  in_memory.py  redis_memory.py
ragframework/observability/: logging.py  metrics.py  tracing.py
ragframework/vectorstores/: base.py  faiss_store.py  registry.py
ragframework/workers/: ingestion_worker.py
src/: chunking.py  embedding.py  generation.py  ingestion.py  log_utils.py  retrieval.py  utils.py
tests/: conftest.py  test_cli.py  test_pipeline.py
tests/contract/: test_llm_contract.py  (+1 more)
(+28 files in other folders)
